TEST_PROGRAMS/VALID/validExpressions.go
package main

import "fmt"

func main() {

        var y =7;
        var z = 10;

        if x := 5; x < y {
                fmt.Println("x<y")
        } else if x > z {
                fmt.Println("x>z")
        } else {
                fmt.Println("neither")
        }

}

