TEST_PROGRAMS/INVALID/04/87.go
package main

func main() {
    var (x int y = 3;)
}
